--- a/Pages/bizcocheria.html
+++ b/Pages/bizcocheria.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column">
                     <div class="card text-bg-dark mt-5 ms-1 me-1 text-center">
-                        <img src="/Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
+                        <img src="../Images/05BaguetteRustica.jpg" class="card-img" alt="PanaderiaClasica">
                         <div class="card-img-overlay align-items-center d-flex justify-content-center">
                             <button class="btn bg-transparent me-2" type="button">
                                 <a class="nav-link active" aria-current="page" href="/Pages/madre.html">
